--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
   "dependencies": {
     "@nestjs/common": "^7.5.1",
     "@nestjs/core": "^7.5.1",
+    "@nestjs/mongoose": "^7.2.0",
     "@nestjs/platform-express": "^7.5.1",
+    "install": "^0.13.0",
+    "mongoose": "^5.11.7",
+    "npm": "^6.14.9",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3"
