--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@nestjs/core": "^7.5.1",
     "@nestjs/mongoose": "^7.2.0",
     "@nestjs/platform-express": "^7.5.1",
+    "class-transformer": "^0.3.1",
+    "class-validator": "^0.12.2",
     "install": "^0.13.0",
     "mongoose": "^5.11.7",
     "npm": "^6.14.9",
