--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "install": "^0.13.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.7",
     "npm": "^6.14.9",
     "reflect-metadata": "^0.1.13",
